Fix the board and history widths on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,10 @@ html, body {
 }
 
 .app-footer {
-  display: absolute;
-  top: 95%;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
   display: flex;
   background-color: rgb(46, 46, 46);
   color: white;
@@ -39,6 +41,12 @@ html, body {
   width:100%;
   text-align: left;
   color: white;
+}
+
+.gameboard-container {
+  background-color: green;
+  height: auto;
+  width: auto;
 }
 
 .gameboard-container h1 {
@@ -107,11 +115,19 @@ html, body {
   .app-header {
     position: relative;
   }
+
+  .gameboard-container {
+    background-color: green;
+    height: 100%;
+    width: 80vw;
+  }
+
   .game-status {
     text-align: center;
     padding: 15px 0 15px 0;
     position: relative;
   }
+
   .main-container {
     padding: 0;
     position: relative;
@@ -121,9 +137,10 @@ html, body {
     text-align: center;
     align-items: center;
   }
+
   .info-container {
     height: auto;
-    width: 500px;
+    width: 80vw;
     margin-left: 0;
     margin-top: 25px;
     min-height: 350px;
