--- a/src/components/Gameboard/Gameboard.css
+++ b/src/components/Gameboard/Gameboard.css
@@ -2,9 +2,16 @@
     border: 0.75rem solid #ff652f;
     border-radius: 20px;
     background: #ff652f;
-    width: 500px;
-    height: 500px;
+    height: 550px;
+    width: 550px;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
     gap: 0.5rem;
+}
+
+@media only screen and (max-width: 1080px) {
+  .gameboard {
+    width: 100%;
+    height: 80vw;
+  }
 }
